# hermes-dashboard-v4

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: RELEASE_TEMPLATE.md
.github/workflows/: release.yml
frontend/: Cargo.toml  index.html
frontend/src/: api.rs  lib.rs  main.rs  types.rs
frontend/src/components/: banner.rs  charts.rs  mod.rs  sessions.rs  stats.rs
scripts/: compress_session.py  install.ps1  install.sh  kill_session.py  uninstall.ps1  uninstall.sh
server/: Cargo.toml
server/src/: main.rs
server/src/api/: alerts.rs  data.rs  health.rs  historical.rs  mod.rs  models.rs  sessions.rs
server/src/db/: mod.rs  pool_rotator.rs  state.rs  usage.rs
server/src/models/: types.rs
