[package]
name = "dashboard-frontend"
version = "4.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
dioxus = { version = "0.6", features = ["web"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.6", features = [] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
